--- a/package.json
+++ b/package.json
@@ -26,5 +26,13 @@
     "@types/express": "^4.16.1",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/khushb00-9/COMP308-W2019-Lesson4.git"
+  },
+  "bugs": {
+    "url": "https://github.com/khushb00-9/COMP308-W2019-Lesson4/issues"
+  },
+  "homepage": "https://github.com/khushb00-9/COMP308-W2019-Lesson4#readme"
 }
