--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week-3",
+  "name": "week-4",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,16 +14,18 @@
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
     "jquery": "^3.3.1",
+    "mongoose": "^5.4.9",
     "morgan": "~1.9.0",
     "popper.js": "^1.14.6"
   },
-  "description": "Express Generator",
+  "description": "MongoDB Demo",
   "main": "server.js",
   "author": "Khushboo Sakervala",
   "license": "ISC",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.3.12",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.12.18"
   },
